--- a/css/addedToCart.css
+++ b/css/addedToCart.css
@@ -7,7 +7,7 @@
   background-color: white;
   padding: 20px;
   border: 1px solid #ccc;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
   z-index: 1000;
   text-align: center;
   width: 60%;
@@ -17,8 +17,7 @@
   font-weight: bold;
   color: #333;
 
-  /* Animation styles (optional) */
-  animation: fadeInOut 5s ease-in-out;
+  animation: fadeInOut 5s ease-in-out; /* Adjust the duration as needed */
 }
 
 /* Optional animation keyframes */
@@ -32,4 +31,39 @@
   100% {
     opacity: 0;
   }
+}
+
+.cartDD {
+  width: 300px;
+  min-height: auto;
+  border: 0.1px black solid;
+  background-color: rgb(255, 255, 255);
+  display: none;
+  position: absolute;
+  top: 12%;
+  right: 1%;
+
+  @keyframes fadeInOut {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+}
+
+.cartItemContainer {
+  display: flex;
+  border: 1px #808080 solid;
+}
+
+.cartItemImg {
+  width: 30%;
+}
+
+.cartItemDets {
+  width: 100%;
+  padding: 10px;
+  text-align: end;
 }
