--- a/css/addedToCart.css
+++ b/css/addedToCart.css
@@ -7,10 +7,10 @@
   background-color: white;
   padding: 20px;
   border: 1px solid #ccc;
-  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   z-index: 1000;
   text-align: center;
-  width: 60%;
+  width: 40%;
 
   /* Text styles */
   font-size: 1.2rem;
@@ -35,27 +35,22 @@
 
 .cartDD {
   width: 300px;
-  min-height: auto;
-  border: 0.1px black solid;
   background-color: rgb(255, 255, 255);
   display: none;
   position: absolute;
-  top: 12%;
+  top: 9%;
   right: 1%;
 
-  @keyframes fadeInOut {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
+  box-shadow: -9px 14px 5px 0px rgba(0, 0, 0, 0.12);
+  -webkit-box-shadow: -9px 14px 5px 0px rgba(0, 0, 0, 0.12);
+  -moz-box-shadow: -9px 14px 5px 0px rgba(0, 0, 0, 0.12);
+
+  animation: fadeIn 0.3s ease-in;
 }
 
 .cartItemContainer {
   display: flex;
-  border: 1px #808080 solid;
+  border: 1px #e6e6e6 solid;
 }
 
 .cartItemImg {
