--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,22 @@ body {
   background-color: white;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
+}
+
+.logo {
+  width: 100px;
+  margin-left: 20px;
+  fill: aqua;
+}
+
+.cartWrapper {
+  width: 100%;
+  margin-bottom: 20px;
+  height: 100px;
+  background-color: white;
+  display: flex;
+  align-items: center;
 }
 
 .cartSection {
@@ -34,7 +49,7 @@ body {
 .cartIcon {
   width: 30px;
   cursor: pointer;
-  margin: -10px;
+  margin-right: 30px;
 }
 
 .itemsInCart {
@@ -43,8 +58,8 @@ body {
   color: white;
   width: 20px;
   height: 20px;
-  margin-right: 20px;
-  margin-top: 15px;
+  margin-top: -20px;
+  margin-left: 20px;
   display: flex;
   justify-content: center;
 }
@@ -71,14 +86,18 @@ body {
 
 .grid-container {
   display: grid;
-  grid-template-columns: 0% 50% 50%;
+  grid-template-columns: 50% 50%;
 }
 
 /* .grid-item {
 } */
 
-.item-1 {
+.item-3 {
   background-color: #ffffff;
+}
+
+.item-2 :hover {
+  background-color: black;
 }
 
 .previewImg {
@@ -88,6 +107,7 @@ body {
 
 .item-2 {
   background-color: white;
+  cursor: pointer;
 }
 
 .productImg {
@@ -95,6 +115,10 @@ body {
   border-radius: 10px;
   height: auto;
 }
+
+/* .productImg:hover {
+  web
+} */
 
 .itemDesc {
   font-size: 1.2em;
@@ -113,6 +137,21 @@ body {
   cursor: pointer;
   transition: background 0.5s ease;
   transition: color 0.5s ease;
+  font-weight: bold;
+}
+
+.cartButtonDisabled {
+  width: 100%;
+  background-color: black;
+  color: white;
+  border: none;
+  cursor: not-allowed;
+  font-size: 1.2em;
+  padding: 10px;
+  border-radius: 20px;
+  transition: background 0.5s ease;
+  transition: color 0.5s ease;
+  font-weight: bold;
 }
 
 .item-3 {
