--- a/css/modal.css
+++ b/css/modal.css
@@ -2,7 +2,7 @@
 .modal {
   display: none;
   position: fixed;
-  top: 0%;
+  top: 10%;
   left: 0;
   width: 100%;
   height: 100%;
@@ -19,7 +19,7 @@
   width: 80%;
   max-width: 800px;
   text-align: center;
-  background-color: #fff;
+  background-color: #f5f5f5;
   padding: 20px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
@@ -54,7 +54,6 @@ button {
   max-width: 100%;
   max-height: 100vh;
   margin-bottom: 10px;
-  animation: myAnim 0.4s ease 0s 1 normal none;
 }
 
 @keyframes fadeIn {
@@ -73,14 +72,44 @@ button {
   }
 }
 
-@keyframes myAnim {
+.modalImageAnimRight {
+  animation: right 0.4s ease 0s 1 normal none;
+}
+
+@keyframes right {
   0% {
     opacity: 0;
-    transform: translateX(50px);
+    transform: translateX(25px);
   }
 
   100% {
     opacity: 1;
     transform: translateX(0);
   }
+}
+
+.modalImageAnimLeft {
+  animation: left 0.4s ease 0s 1 normal none;
+}
+
+@keyframes left {
+  0% {
+    opacity: 0;
+    transform: translateX(-25px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+/* Styles for a disabled button */
+.disabledButton {
+  background-color: #ccc;
+  color: #888;
+  cursor: not-allowed;
+  opacity: 0.6;
+  pointer-events: none;
+  border: none;
 }
