--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 /* General styles for all screen sizes */
 body {
+  width: 100%;
   margin: 0;
   font-family: Arial, sans-serif;
   transition: background 0.5s ease;
@@ -26,20 +27,14 @@ body {
   fill: aqua;
 }
 
-.cartWrapper {
+/* .cartWrapper {
   width: 100%;
   margin-bottom: 20px;
   height: 100px;
   background-color: white;
   display: flex;
   align-items: center;
-}
-
-.cartSection {
-  width: 100%;
-  justify-content: center;
-  display: none;
-}
+} */
 
 .icon {
   width: 20px;
@@ -114,6 +109,16 @@ body {
 }
 .item-2Anim {
   animation: imgAnim 0.4s linear 0s 1 normal none;
+}
+
+footer {
+  width: 100%;
+  height: 100px;
+  background-color: rgb(0, 0, 0);
+  display: flex;
+  align-items: center;
+  color: white;
+  justify-content: center;
 }
 
 @keyframes imgAnim {
@@ -209,8 +214,45 @@ body {
   cursor: pointer;
 }
 
+/* Video Section */
+
+.videoSection {
+  width: 100%;
+  min-height: 70vh;
+
+  background-color: #ffffff;
+  display: flex;
+  overflow: hidden;
+  margin-bottom: 30px;
+}
+
+.videoWrapper {
+  height: auto;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.videoPlayer {
+  width: 100%;
+  height: 70vh;
+}
+
 /* Styles for medium-sized screens and above */
 @media (max-width: 1200px) {
+  .videoSection {
+    width: 100%;
+    min-height: 40vh;
+    background-color: #ffffff;
+    display: block;
+    overflow: hidden;
+  }
+
+  .videoPlayer {
+    width: 100%;
+    max-height: 40vh;
+  }
+
   .container {
     width: 80%;
   }
@@ -226,7 +268,10 @@ body {
   .item-2 {
     grid-column: span 2; /* Second grid spans two columns */
     width: 100%;
-    height: auto;
+  }
+
+  .item-2 img {
+    margin-top: 20px;
   }
 
   .item-3 {
@@ -236,22 +281,17 @@ body {
 }
 
 /* Styles for smaller screens (e.g., mobile devices) */
-@media (max-width: 767px) {
-  .container {
-    width: 80%;
-  }
-
+@media (max-width: 900px) {
   .grid-container {
     grid-template-columns: 100%; /* Make all columns occupy 100% of the screen width */
-    grid-gap: 5px; /* Adjust gap for smaller screens */
+  }
+
+  .item-2 {
+    min-height: 30vh;
   }
 
   .grid-item {
     width: 100%;
     text-align: left; /* Adjust text alignment for readability on small screens */
-  }
-
-  .item-1 {
-    display: none;
   }
 }
